# ahaab

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml
scripts/: HLA_db.py  IEDBTestPipeline.py  flagged_IEDB_data.csv  gen_pkd_file.py  get_hla_peptide_models.py  pKd_binary_ahaab_training.csv  pKd_linear_ahaab_training.csv  pKd_log10_ahaab_training.csv  test_iedb.csv
src/: ahaab.py
src/data/: manage_data.py
src/features/: atom_features.py  get_features.py
src/predict/: classifiers.py  predict_ahaab.py
src/tools/: data_loaders.py  formats.py  handle_input.py  multitask.py  retrieve_data.py  utils.py  validate_input.py
src/train/: train_ahaab.py
tests/: AHAAB_atom_features.csv  pkd.csv  pkd_log.csv  test_files.txt
tests/binders_nonbinders/: ahaab_model_0.pth  ahaab_model_1.pth  ahaab_model_2.pth  ahaab_model_3.pth  ahaab_model_4.pth  ahaab_training_summary.csv  ahaab_training_summary.xlsx  pkd_binary.csv
tests/binders_only/: AHAAB_atom_features_bindersonly.csv  pkd.csv  pkd_log.csv  pkd_log2.csv
tests/binders_only/log2_pkd/100_epoch/: ahaab_model_0.pth  ahaab_model_1.pth  (+1 more)
tests/features_test/: features_test.csv
tests/initial_tests/train_test1_log/: ahaab_model_0.pth  ahaab_model_1.pth  ahaab_model_2.pth  ahaab_model_3.pth  ahaab_model_4.pth  ahaab_training_summary.csv  test1_features.csv  test1_pkd.csv
tests/initial_tests/train_test2_linear/: ahaab_model_0.pth  ahaab_model_1.pth  ahaab_training_summary.csv
tests/initial_tests/train_test2_log/: ahaab_model_0.pth  ahaab_model_1.pth  ahaab_model_2.pth  ahaab_model_3.pth  ahaab_model_4.pth
(+54 files in other folders)
