[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahaab"
version = "0.0.1"
authors = [
  { name="Nathaniel Bloodworth", email="nathaniel.c.bloodworth.1@vumc.org" },
]
description = "Antigen-HLA Affinity predictions from Atom Based features"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nbloodworth/ahaab"